--- a/src/static/style/cart.css
+++ b/src/static/style/cart.css
@@ -18,7 +18,7 @@
     align-items: center;
     justify-content: center;
     padding: 1.5rem;
-    background: linear-gradient(135deg, #ff9f43, #f68b1e);
+    background: linear-gradient(135deg, #ff5722, #f68b1e);
     color: white;
     position: relative;
   }
