--- a/src/static/style/footer.css
+++ b/src/static/style/footer.css
@@ -1,5 +1,5 @@
 .footer {
-    background-color: #f9f8f7;
+    background-color: #ffffff;
     border-top: 1px solid #e5e7eb;
     padding: 50px 0;
     margin-top: 60px;
@@ -13,7 +13,7 @@
 }
 
 .footer-brand {
-    background-color: #efa31f;
+    background-color: #f36034;
     padding: 30px;
     border-radius: 12px;
     color: white;
@@ -108,15 +108,17 @@
 
 .footer-bottom {
     border-top: 1px solid #e5e7eb;
-    padding: 20px 0;
-    background-color: #f9f9f9;
+    /* padding: 5px 0; */
+    background-color: #ebebeb;
     margin-bottom: -50px;
+    height: 50px;
 }
 
 .footer-copyright {
-    font-size: 14px;
-    color: #6b7280;
+    font-size: 16px;
+    color: #313131;
     text-align: center;
+    margin-top: 12px;
 }
 
 
