--- a/src/static/style/home.css
+++ b/src/static/style/home.css
@@ -11,17 +11,15 @@ html, body {
 
 .home-layout {
   min-height: 100vh;
-  width: 99.87%;
   background-color: #ffffff;
 }
 
 .home-header {
-  width: 100%;
   background-color: #b038382e;
   color: #fff;
   box-shadow: 0 2px 8px rgba(0, 0, 0, 0.2);
-  /* padding: 16px 48px; */
   text-align: center;
+  margin-top: -7px;
 }
 
 .sider-content-layout {
