--- a/src/static/style/navbar.css
+++ b/src/static/style/navbar.css
@@ -5,8 +5,8 @@ body {
 }
 
 .navbar {
-  max-width: calc(100% - 17px);
-  background: linear-gradient(135deg, #f68b1e, #ff9f43);
+  max-width: calc(100% - 15px);
+  background: #ff5722;
   color: white;
   padding: 0;
   position: fixed;
@@ -14,7 +14,7 @@ body {
   top: 0;
   z-index: 1000;
   box-shadow: 0 2px 15px rgba(0, 0, 0, 0.1);
-  height: 70px;
+  height: 67px; /* chỉnh được */
   display: flex;
   align-items: center;
 }
@@ -52,7 +52,7 @@ body {
 
 .navbar-search {
   flex: 1;
-  max-width: 500px;
+  max-width: 700px;
   margin: 0 20px;
 }
 
@@ -60,6 +60,7 @@ body {
   display: flex;
   position: relative;
   width: 100%;
+  height: 40px;
 }
 
 .search-input {
@@ -84,7 +85,7 @@ body {
   right: 3px;
   top: 3px;
   bottom: 3px;
-  background: linear-gradient(135deg, #f68b1e, #ff9f43);
+  background: #ff5722;
   color: white;
   border: none;
   padding: 0 20px;
@@ -97,7 +98,7 @@ body {
 }
 
 .search-button:hover {
-  background: linear-gradient(135deg, #e67e1b, #f0943d);
+  background: linear-gradient(135deg, #ff5722, #f0943d);
   transform: translateY(-1px);
 }
 
