--- a/src/static/style/adminPage.css
+++ b/src/static/style/adminPage.css
@@ -58,12 +58,12 @@
 }
 
 ::-webkit-scrollbar-thumb {
-  background: linear-gradient(135deg, #3b82f6, #1d4ed8);
-  border-radius: 3px;
+  background: linear-gradient(135deg, #525353, #656565);
+  /* border-radius: 3px; */
 }
 
 ::-webkit-scrollbar-thumb:hover {
-  background: linear-gradient(135deg, #1d4ed8, #1e40af);
+  background: linear-gradient(135deg, #1d4ed8, #bfbfc2);
 }
 
 .ant-card {
